--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
                     <li>- Hide and Seek Extreme</li>
                     <li>- Pet Hatching Simulator 99</li>
                     <li>- Tsunami Game</li>
+		    <li>- Tap Game</li>
                 </ul>
                 <h3>Script:</h3>
                 <textarea id="script-text" readonly>
