--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <p>Join our Discord server to get more scripts!</p>
             
             <div id="description">
-                <h3>Supported Games [11]</h3>
+                <h3>Supported Games [12]</h3>
                 <ul class="description-list">
                     <li>- Ninja Legends</li>
                     <li>- Natural Disaster</li>
@@ -372,6 +372,7 @@
                     <li>- Pet Hatching Simulator 99</li>
                     <li>- Tsunami Game</li>
 		    <li>- Tap Game</li>
+		    <li>- Dead Rails</li>
                 </ul>
                 <h3>Script:</h3>
                 <textarea id="script-text" readonly>
