--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>Join our Discord server to get more scripts!</p>
             
             <div id="description">
-                <h3>Supported Games [16]</h3>
+                <h3>Supported Games [17]</h3>
                 <ul class="description-list">
                     <li><i class="fas fa-gamepad"></i> Ninja Legends</li>
                     <li><i class="fas fa-gamepad"></i> Natural Disaster</li>
@@ -73,6 +73,7 @@
                     <li><i class="fas fa-gamepad"></i> Pet Clickers X</li>
                     <li><i class="fas fa-gamepad"></i> Sword Fighters Simulator</li>
                     <li><i class="fas fa-gamepad"></i> Tap Topia Reborn</li>
+		    <li><i class="fas fa-gamepad"></i> Bubble Gum Simulator INFINITY</li>
                 </ul>
                 <h3>Script:</h3>
                 <textarea id="script-text" readonly>
