--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>Join our Discord server to get more scripts!</p>
             
             <div id="description">
-                <h3>Supported Games [18]</h3>
+                <h3>Supported Games [19]</h3>
                 <ul class="description-list">
                     <li><i class="fas fa-gamepad"></i> Ninja Legends</li>
                     <li><i class="fas fa-gamepad"></i> Natural Disaster</li>
@@ -73,11 +73,12 @@
                     <li><i class="fas fa-gamepad"></i> Pet Clickers X</li>
                     <li><i class="fas fa-gamepad"></i> Sword Fighters Simulator</li>
                     <li><i class="fas fa-gamepad"></i> Tap Topia Reborn</li>
-		    <li><i class="fas fa-gamepad"></i> Bubble Gum Simulator INFINITY</li>
-		    <li><i class="fas fa-gamepad"></i> Clicker Madness</li>
-                </ul>
-                <h3>Script:</h3>
-                <textarea id="script-text" readonly>
+		            <li><i class="fas fa-gamepad"></i> Bubble Gum Simulator INFINITY</li>
+		            <li><i class="fas fa-gamepad"></i> Clicker Madness</li>
+		            <li><i class="fas fa-gamepad"></i> Pet Hatching Simulator 99 Reborn</li>
+                    </ul>
+                    <h3>Script:</h3>
+                    <textarea id="script-text" readonly>
 loadstring(game:HttpGet("https://raw.githubusercontent.com/D3f4ultscript/Scripts-for-D3f4ult-Hub/refs/heads/main/Hub.lua"))()</textarea>
                 <button id="copy-btn" onclick="copyScript()">
                     <i class="fas fa-copy"></i> Copy Script
