--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>Join our Discord server to get more scripts!</p>
             
             <div id="description">
-                <h3>Supported Games [19]</h3>
+                <h3>Supported Games [20]</h3>
                 <ul class="description-list">
                     <li><i class="fas fa-gamepad"></i> Ninja Legends</li>
                     <li><i class="fas fa-gamepad"></i> Natural Disaster</li>
@@ -76,6 +76,7 @@
 		            <li><i class="fas fa-gamepad"></i> Bubble Gum Simulator INFINITY</li>
 		            <li><i class="fas fa-gamepad"></i> Clicker Madness</li>
 		            <li><i class="fas fa-gamepad"></i> Pet Hatching Simulator 99 Reborn</li>
+		            <li><i class="fas fa-gamepad"></i> Infinite Taps</li>
                     </ul>
                     <h3>Script:</h3>
                     <textarea id="script-text" readonly>
