--- a/index.html
+++ b/index.html
@@ -55,28 +55,11 @@
             <p>Join our Discord server to get more scripts!</p>
             
             <div id="description">
-                <h3>Supported Games [20]</h3>
+                <h3>Supported Games [20+]</h3>
                 <ul class="description-list">
-                    <li><i class="fas fa-gamepad"></i> Ninja Legends</li>
-                    <li><i class="fas fa-gamepad"></i> Natural Disaster</li>
-                    <li><i class="fas fa-gamepad"></i> Rebirth Champions X</li>
-                    <li><i class="fas fa-gamepad"></i> Prison Life</li>
-                    <li><i class="fas fa-gamepad"></i> Clicker Master</li>
-                    <li><i class="fas fa-gamepad"></i> A literal baseplate</li>
-                    <li><i class="fas fa-gamepad"></i> The $1,000,000 Glass Bridge</li>
-                    <li><i class="fas fa-gamepad"></i> Hide and Seek Extreme</li>
-                    <li><i class="fas fa-gamepad"></i> Pet Hatching Simulator 99</li>
-                    <li><i class="fas fa-gamepad"></i> Tsunami Game</li>
-                    <li><i class="fas fa-gamepad"></i> Tap Game</li>
-                    <li><i class="fas fa-gamepad"></i> Dead Rails</li>
-                    <li><i class="fas fa-gamepad"></i> Eat Blobs</li>
-                    <li><i class="fas fa-gamepad"></i> Pet Clickers X</li>
-                    <li><i class="fas fa-gamepad"></i> Sword Fighters Simulator</li>
-                    <li><i class="fas fa-gamepad"></i> Tap Topia Reborn</li>
-		            <li><i class="fas fa-gamepad"></i> Bubble Gum Simulator INFINITY</li>
-		            <li><i class="fas fa-gamepad"></i> Clicker Madness</li>
-		            <li><i class="fas fa-gamepad"></i> Pet Hatching Simulator 99 Reborn</li>
-		            <li><i class="fas fa-gamepad"></i> Infinite Taps</li>
+                    <li><i class="fas fa-gamepad"></i> Clicker Games</li>
+                    <li><i class="fas fa-gamepad"></i> Action Games [Tycoons, Simulators...]</li>
+                    <li><i class="fas fa-gamepad"></i> and much more, join my discord to see all Games</li>
                     </ul>
                     <h3>Script:</h3>
                     <textarea id="script-text" readonly>
